--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  adhan:
+    git: 
+      url: "https://github.com/iamriajul/adhan-dart.git"
+      ref: "v2" 
 
 dev_dependencies:
   flutter_lints: ^1.0.0
