--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  get_it: ^7.2.0
   intl: ^0.17.0
+  intro_slider: ^3.0.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
