--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  geocoding: ^2.0.1
+  geolocator: ^8.0.1
   get_it: ^7.2.0
   intl: ^0.17.0
   intro_slider: ^3.0.2
