--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^7.2.0
   intl: ^0.17.0
   intro_slider: ^3.0.2
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_lints: ^1.0.0
