--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_settings_ui: ^2.0.1
   geocoding: ^2.0.1
   geolocator: ^8.0.1
   get_it: ^7.2.0
