--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -27,7 +27,7 @@ jobs:
           
       - run: flutter pub get
       - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build ios --release --no-codesign
       
       - uses: actions/upload-artifact@v1
         with:
