--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,8 +8,6 @@ name: Flutter
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -24,6 +22,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'dev'
+          cache: true
+          cache-key: flutter-000
           
       - run: flutter pub get
       - run: flutter build apk
@@ -33,5 +33,5 @@ jobs:
         with:
           name: release-bundles
           path: |
-            build/app/outputs/apk/release/app-release.apk
+            build/app/outputs/flutter-apk/app-release.apk
             build/ios/iphoneos/Runner.app
