--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geocoding: ^2.0.1
   geolocator: ^8.0.1
   get_it: ^7.2.0
+  google_fonts: ^2.3.1
   intl: ^0.17.0
   intro_slider: ^3.0.2
   shared_preferences: ^2.0.11
