--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   go_router: ^10.1.2
+
+  pray_times:
+    git:
+      url: https://github.com/taukeet/prayer_times_flutter.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
