--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: any
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   go_router: ^10.1.2
 
-  pray_times:
+  adhan_dart:
     git:
-      url: https://github.com/taukeet/prayer_times_flutter.git
-      ref: master
+      url: https://github.com/taukeet/adhan_dart.git
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +25,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Lateef
+      fonts:
+        - asset: assets/fonts/Lateef-Regular.ttf
