--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
+  test: ^1.24.3
 
 flutter:
   uses-material-design: true
