--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,11 @@ dependencies:
       url: https://github.com/taukeet/adhan_dart.git
   location: ^5.0.3
   geocoding: ^2.1.0
-  hive_flutter: ^1.1.0
-  hive: ^2.2.3
   get_it: ^7.6.4
   flutter_native_splash: ^2.3.2
   flutter_launcher_icons: ^0.13.1
+  hydrated_bloc: ^9.1.2
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
