--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
+  app_settings: ^5.0.0
 
 dev_dependencies:
   flutter_test:
