--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,6 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   go_router: ^10.1.2
-
-  adhan_dart:
-    git:
-      url: https://github.com/taukeet/adhan_dart.git
   location: ^5.0.3
   geocoding: ^2.1.0
   get_it: ^7.6.4
@@ -26,6 +22,7 @@ dependencies:
   path_provider: ^2.1.1
   app_settings: ^5.0.0
   flutter_form_builder: ^9.1.1
+  adhan: ^2.0.0
 
 dev_dependencies:
   flutter_test:
