--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
-  hive_generator: ^2.0.1
-  test: ^1.24.3
+  bloc_test: ^9.1.4
+  mocktail: ^1.0.0
 
 flutter:
   uses-material-design: true
