--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   bloc_test: ^9.1.4
   mocktail: ^1.0.0
+  change_app_package_name: ^1.1.0
 
 flutter:
   uses-material-design: true
