--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   app_settings: ^5.0.0
   flutter_form_builder: ^9.1.1
   adhan: ^2.0.0
+  showcaseview: ^2.0.3
 
 dev_dependencies:
   flutter_test:
