--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_form_builder: ^9.1.1
   adhan: ^2.0.0
   intro_slider: ^4.2.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
