--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,28 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
   intl: any
-  equatable: ^2.0.5
-  flutter_bloc: ^8.1.3
   go_router: ^14.2.9
   location: ^7.0.0
   geocoding: ^3.0.0
-  get_it: ^8.0.0
   flutter_native_splash: ^2.3.2
   flutter_launcher_icons: ^0.14.1
-  hydrated_bloc: ^9.1.2
-  path_provider: ^2.1.1
   app_settings: ^5.0.0
   flutter_form_builder: ^9.1.1
   adhan: ^2.0.0
   intro_slider: ^4.2.1
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
-  bloc_test: ^9.1.4
-  mocktail: ^1.0.0
   change_app_package_name: ^1.1.0
 
 flutter:
