--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   change_app_package_name: ^1.1.0
+  l10n_mapper_generator: ^2.2.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/icons/
