--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   app_settings: ^5.0.0
   flutter_form_builder: ^10.0.1
   adhan: ^2.0.0
-  intro_slider: ^4.2.1
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.2
   intl: ^0.20.2
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
