--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   adhan: ^2.0.0
   app_settings: ^5.0.0
   carousel_slider: ^5.1.1
+  dartz: ^0.10.1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_form_builder: ^10.0.1
