--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   flutter_native_splash: ^2.3.2
   flutter_riverpod: ^2.6.1
   geocoding: ^3.0.0
+  get_it: ^8.2.0
   go_router: ^14.2.9
+  injectable: ^2.5.1
   intl: ^0.20.2
   location: ^7.0.0
   shared_preferences: ^2.5.2
@@ -33,6 +35,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.8.1
   l10n_mapper_generator: ^2.2.0
   mocktail: ^1.0.0
   riverpod_test: ^0.1.9
