--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.20.2
   location: ^7.0.0
   shared_preferences: ^2.5.2
+  flutter_compass: ^0.8.0
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -45,6 +46,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/icons/compass_background.png
+    - assets/icons/compass_needle.png
     - assets/data/
   fonts:
     - family: Lateef
